Network-Policy-Learning-Environment/allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: np-demo
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
