Network-Policy-Learning-Environment/combined-ingress-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: combined-ingress-egress
  namespace: np-demo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          access: true
